# XaoS

./: .dockerignore  .gitignore  3dtutor.xaf  AUTHORS  AndroidResources.qrc  CMakeLists.txt  CREDITS.md  ChangeLog  ChangeLog.c  ChangeLog.e  ChangeLog.f  ChangeLog.g  ChangeLog.h  ChangeLog.i  ChangeLog.j  ChangeLog.k  ChangeLog.l  ChangeLog.m  ChangeLog.n  ChangeLog.old  ChangeLog.q  ChangeLog.r  ChangeLog.t  ChangeLog.u  ChangeLog.v  ChangeLog.w  ChangeLog.x  ChangeLog.y  Dockerfile.mobile  Dockerfile.wasm  Dockerfile.win  Doxyfile  INSTALL  INSTALL.dos  INSTALL.md  Makefile.OS2  Makefile.be  Makefile.in  NEWS  README  (+28 more)
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml  ccpp.yml
android/: AndroidManifest.xml  build.gradle
catalogs/: README  README.i18n  cesky.cat  cs.cat  de.cat  deutsch.cat  en.cat  english.cat  es.cat  espanhol.cat  fr.cat  francais.cat  hu.cat  it.cat  italian.cat  italiano.cat  magyar.cat  portuguese.cat  pt.cat  ro.cat  romanian.cat  ru.cat  russian.cat
doc/: ANNOUNCE  AUTHORS  INSTALL  Makefile.in  PROBLEMS  README  README.BeOS  README.OS2  README.WIN  README.bugs  README.dos  README.ggi  README.mac  README.plan9  README2.dos  SPONSORS  XaoS.lsm  built-in_formulas.txt  compilers.txt  file_id.diz  mkauthors  mktexi  mktexinfo  mpeg_encode.patch  rest.py  template.param  texi2rest.py  texinfo.py  xaos.6  xaos.geninfo  xaos.info  xaos.texinfo  xaosdev.info  xaosdev.texinfo
docker/: Dockerfile
examples/: 0rfel1.xpf  2spirals.xpf  3d1.xpf  3d2.xpf  3d5.xpf  3d6.xpf  3d7.xpf  README  barnsl3.xpf  barnsl4.xpf  barnsl5.xpf  barnsl7.xpf  barnsl8.xpf  barnsl9.xpf  beatle.xpf  brown.xpf  checker.xpf  crone.xpf  dragons.xpf  dragons2.xpf  edge.xpf  edge3.xpf  goldrive.xpf  head2.xpf  incolor1.xpf  incolor3.xpf  incolor4.xpf  julia5.xpf  juliaanim.xaf  magnet.xpf  magnet3.xpf  magnet4.xpf  mand2.xpf  mand4.xpf  mand7.xpf  mand8.xpf  mand9.xpf  mandanim.xaf  minibrot.xpf  newton.xpf  (+20 more)
examples/0rfelyus/: 0rfel1.xpf  0rfel2.xpf
examples/Hubicka/: 2spirals.xpf  3d1.xpf  3d2.xpf  3d3.xpf  3d4.xpf  3d5.xpf  3d6.xpf  3d7.xpf  3d8.xpf  3d9.xpf  axe.xpf  barnsl1.xpf  barnsl2.xpf  barnsl3.xpf  barnsl4.xpf  barnsl5.xpf  barnsl6.xpf  barnsl7.xpf  barnsl8.xpf  barnsl9.xpf  beatle.xpf  beatle2.xpf  brown.xpf  checker.xpf  crone.xpf  dblspira.xpf  dragons.xpf  dragons2.xpf  edge.xpf  edge2.xpf  edge3.xpf  eifell.xpf  galaxy.xpf  goldrive.xpf  head.xpf  head2.xpf  head3.xpf  incolor1.xpf  incolor2.xpf  incolor3.xpf  (+61 more)
examples/Langston/: animal.xpf  butterfly-langston.xpf  butterfly.xpf  eye.xpf  newcolor.xpf  newt.xpf  newt2.xpf  paisleypillow.xpf  paramecium.xpf  pretty.xpf  pretty2.xpf  royal.xpf  rpg.xpf  whisp.xpf
examples/Malczak/: alien.xpf  burnship.xpf  butterfly.xpf  circle.xpf  dark.xpf  eyes.xpf  fract0.xpf  heart.xpf  helloween.xpf  pentafrac.xpf  skullfrm.xpf  warriormask.xpf
examples/Rezocrypt/: Diamond Eye.xpf  cigarettes.xpf  elevators.xpf  royal_fabric.xpf
examples/ZKovacs/: fract0.xpf  fract1.xpf  hornflake1.xpf  hornflake2.xpf  mand9.xpf
examples/ZsKovacs/: bolygo.xpf  csiga2.xpf  csiga3.xpf  csiga4.xpf  csiga5.xpf  gamma.xpf  golden.xpf  impulzus.xpf  kovzsi10.2.xpf  kovzsi12.xpf  kovzsi14.xpf  kovzsi15.xpf  kovzsi16.xpf  kovzsi17.xpf  kovzsi2.1.xpf  kovzsi2.xpf  kovzsi3.1.xpf  kovzsi3.2.xpf  kovzsi4.xpf  kovzsi6.1.xpf  kovzsi6.2.xpf  kovzsi6.xpf  kovzsi7.1.xpf  kovzsi7.2.xpf  kovzsi7.3.xpf  kovzsi7.4.xpf  kovzsi7.5.xpf  kovzsi8.xpf  kovzsi9.2.xpf  kovzsi9.xpf  light-kovzsi.xpf  lighting.xpf  nap.xpf  orveny.xpf  pavaszem.xpf  pavaszem2.xpf  pepita.xpf  zsigapro.xpf
examples/adammaj1/: parjulia1.xpf  parjulia2.xpf
help/: Makefile.in  README  applehelpconv  conv  convert  dokuwikiconv  fixmult  hlptortf  htmlconv  htmlconvert  multfix  restconv  rtfconv  rtfconv.bat  tutorial.scpt  winhelpconv  xaos.hlp  xaoshelp.css  xaoshelp.hhp  xaoswin.Hpj  xhtml2rest.py
help/rest/: BeOS.txt  DGA.txt  aa.txt  (+152 more)
i18n/: README  README.md  XaoS_cs.ts  XaoS_de.ts  XaoS_es.ts  XaoS_fr.ts  XaoS_he.ts  XaoS_hi.ts  XaoS_hu.ts  XaoS_hy.ts  XaoS_is.ts  XaoS_it.ts  XaoS_pt.ts  XaoS_ro.ts  XaoS_rs.ts  XaoS_ru.ts  XaoS_sk.ts  XaoS_sv.ts  XaoS_tr.ts  XaoS_vi.ts  XaoS_zh.ts  cs.po  de.po  es.po  fr.po  hu.po  i18n.pri  it.po  pt.po  ro.po  ru.po
installer/: xaos.iss
m4/: ax_cc_maxopt.m4  ax_check_compiler_flags.m4  ax_compiler_vendor.m4  ax_gcc_archflag.m4  ax_gcc_x86_cpuid.m4
src/: CMakeLists.txt  Makefile.dos  Makefile.in  dos.mak  dos1.mak
src/engine/: 3d.c  3d.cpp  3dd.c  3dd.h  CMakeLists.txt  Makefile.dos  Makefile.in  Makefile.os2  algorithms.md  anti.c  anti.cpp  blur.c  blur.cpp  btrace.c  btrace.cpp  btraced.c  btraced.h  calculate.h  dither.c  dither.cpp  docalc.c  docalc.h  edge.c  edge.cpp  edge2.c  edge2.cpp  edge2d.c  edge2d.h  edged.c  edged.h  emboss.c  emboss.cpp  engine.pri  exprtk.cpp  exprtk.hpp  filter.cpp  formulas.c  formulas.cpp  fractal.c  fractal.cpp  (+34 more)
src/ui/ui-drv/qt/: CMakeLists.txt  XaoS.icns  XaoS.pro  aconfig.h  config.h  config.pri  customdialog.cpp  customdialog.h  fractalwidget.cpp  fractalwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qt.pri  qt_gettext.h  version.h  xaos.rc
tools/: README.md  cat2prop.py  compile-qt-web  compile-xaos-web  create-deb  create-windows-bin-folder  create-windows-zip  cygwin_profile  dep-deb-versions  deploy-mac  deploy-win.bat  dlldeps  do-indent  gettextlib-exports.c.patch  indent1  mingw_profile  mkChangeLog  msys_profile  nametest.sh  postprocess-web  prop2cat.py  set-document-title  tarball  update  wintounix.c  xaf2cat  xaos.iss
tutorial/: 3dtutor.xaf  Bclosing.xaf  Bintro.xaf  Bolyai.xaf  anim.xaf  anim.xhf  barnsley.xaf  classic.xaf  coast.xhf  dimension.xaf  escape.xaf  features.xaf  filter.xaf  filter.xhf  flake1.xhf  flake2.xhf  flake3.xhf  flake4.xhf  flake5.xhf  flaketh.xhf  fmath.xaf  fourfr.xaf  fractal.xaf  head.xhf  incolor.xaf  innew.xhf  intro.xaf  iter.xaf  julia.xaf  keys.xhf  line1.xhf  magnet.xaf  mset.xaf  msetren.xaf  new30.xaf  new40.xaf  newton.xaf  octo.xaf  other.xaf  otherfr.xaf  (+17 more)
xdg/: io.github.xaos_project.XaoS.desktop  xaos.appdata.xml  xaos.desktop
(+454 files in other folders)
